--- a/ferremas_frontend/package.json
+++ b/ferremas_frontend/package.json
@@ -25,7 +25,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.11",
-    "@angular/cli": "^19.2.11",
+    "@angular-devkit/core": "^20.0.3",
+    "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
